feat(persistence): add flyway migration for employees

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,12 @@ spring:
       resourceserver:
         jwt:
           secret-key: ${JWT_SECRET:dev-local-secret-change-me}
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        format_sql: true
 
 management:
   endpoints:
